# PeopleCounterOpenCV

./: .gitignore  CMakeLists.txt  README.md  buildAndRun.sh  cvui.h  main.cpp
videos/: [10 sec fragment, HDconvert.com] TownCentreXVID.avi
